Fix jumpy layout

--- a/assets/css/scss/_modals.scss
+++ b/assets/css/scss/_modals.scss
@@ -16,6 +16,7 @@
 	height: 95vh;
 	border: 0;
 	background: none;
+	padding: 0;
 
 	&[open] {
 		transition: opacity 150ms linear;
@@ -30,6 +31,7 @@
 		z-index: 2;
 		width: 100%;
 		background-color: rgb(255, 255, 255);
+		padding: var(--wp--style--global--content-padding, 1.5rem);
 	}
 }
 
